fix(post-details): wrap long unbroken text in post views

--- a/src/app/features/posts/components/posts-table/posts-table.component.scss
+++ b/src/app/features/posts/components/posts-table/posts-table.component.scss
@@ -1,4 +1,5 @@
 @use 'palette' as *;
+@use 'mixins' as *;
 
 .posts-table {
   width: 100%;
@@ -58,6 +59,8 @@
     font-size: 1rem;
     font-weight: 600;
     color: $color-slate-900;
+    @include break-long-words;
+    max-width: 28rem;
   }
 
   &__description {
