--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -100,6 +100,11 @@
   }
 }
 
+@mixin break-long-words {
+  overflow-wrap: anywhere;
+  word-break: break-word;
+}
+
 @mixin skeleton-shimmer {
   @keyframes shimmer {
     0% {
